--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,14 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.1.4</version>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<finalName>fabricaweb</finalName>
 		<plugins>
